--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Relatório de Biologia</title>
     <link rel="stylesheet" href="codeCSS/style.css" type="text/css">
-    <link rel="shortcut icon" href="../img_vid/fermentacao.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="img_vid/fermentacao.ico" type="image/x-icon">
 </head>
 <body>
     <header>
