--- a/codeHTML/vid.html
+++ b/codeHTML/vid.html
@@ -35,7 +35,7 @@
                     <source src="../img_vid/timelaps.mp4" type="video/mp4">
                     Seu navegador não suporta vídeos em HTML5.
                 </video>
-                <p class="legend">Preenchimento do saco com a mistura fermentada.</p>
+                <p class="legend">Resultado da fermentação.</p>
             </div>
         </section>
     </main>
